--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "quicktype",
+  "name": "@willh/quicktype",
   "version": "15.0.0",
   "license": "Apache-2.0",
   "main": "dist/cli/index.js",
   "types": "dist/cli/index.d.ts",
-  "repository": "https://github.com/quicktype/quicktype",
+  "repository": "https://github.com/doggy8088/quicktype",
   "scripts": {
     "pub": "script/publish.sh",
     "prepare": "npm run build",
