--- a/src/cli/tsconfig.json
+++ b/src/cli/tsconfig.json
@@ -20,7 +20,7 @@
         "baseUrl": ".",
         "paths": {
             "quicktype-core": [
-                "../quicktype-core"
+                "../@willh/quicktype-core"
             ]
         }
     }
